--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.6.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.540.0",
     "next": "15.5.0",
     "next-themes": "^0.4.6",
